[gd_scene load_steps=8 format=3 uid="uid://jasn4k6iyuea"]

[ext_resource type="Script" path="res://scripts/babySlimeRobot.gd" id="1_q4tjd"]
[ext_resource type="Texture2D" uid="uid://b2ydkf5njndxc" path="res://assets/2d/shooterMinigame/explosionSprite.png" id="2_vi4c8"]
[ext_resource type="Texture2D" uid="uid://crp63vykbrpe4" path="res://assets/2d/shooterMinigame/babySlime.png" id="3_7fhxj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_koujc"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k12x3"]
emission_shape = 1
emission_sphere_radius = 26.34
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2
attractor_interaction_enabled = false

[sub_resource type="CircleShape2D" id="CircleShape2D_kftdx"]
radius = 13.0384

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wwco"]
size = Vector2(32, 20)

[node name="babySlimeRobot" type="CharacterBody2D"]
position = Vector2(984, 312)
collision_layer = 64
script = ExtResource("1_q4tjd")

[node name="explosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_koujc")
position = Vector2(1, -1)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_k12x3")
texture = ExtResource("2_vi4c8")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -4)
scale = Vector2(4, 4)
texture = ExtResource("3_7fhxj")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CircleShape2D_kftdx")
disabled = true

[node name="bulletScanner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="bulletScanner"]
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_2wwco")
disabled = true

[connection signal="area_entered" from="bulletScanner" to="." method="_on_bullet_scanner_area_entered"]
